# Bachelorarbeit

./: .gitignore  README.md  app.py  app_cluster.py  app_kmean.py  devenv.nix  funktionen_streamlit.py  main.py  pyproject.toml
.streamlit/: config.toml
bachelorarbeit/: data.py  pca.py  reduction.py
bachelorarbeit/plot/: fwhm.py  spectrum_and_image.py
funktionen/: funktionen.py
pages/: analyzis.py  app_cluster.py  exploration.py
simulationen/: BeispielGraphen.py  FWHM-Analyse  Features.py  SOM-Datenwolke.py  SOM_simu.py  dbscan_simu.py  kmeans_simu.py  pca_simu.py  vorverarbeitung_simu.py
